--- a/Phone/main/res/layout/account_info_password_strength_help.xml
+++ b/Phone/main/res/layout/account_info_password_strength_help.xml
@@ -229,6 +229,63 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/light_text_size" />
             
+            <TextView
+                android:id="@+id/account_info_help_go_back_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_below="@id/account_info_help_p3_label"
+                android:clickable="true"
+                android:onClick="goBack"
+                android:padding="8dp"
+                android:text="@string/go_back"
+                android:textColor="@color/blue"/>
+            
+            
+            <TableRow
+            android:id="@+id/account_info_help_row"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/account_info_help_go_back_label"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp" >
+
+            <TextView
+                android:id="@+id/need_help_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/need_help_text"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/help_number_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="@string/need_help_number_text"
+                android:textColor="@color/blue" />
+        </TableRow>
+        
+               <TextView
+            android:id="@+id/feedback_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/account_info_help_row"
+            android:layout_centerHorizontal="true"
+            android:text="@string/feedback_text"
+            android:textColor="@color/blue" 
+            android:layout_marginTop="64dp"/>
+            
+            <TextView
+            android:id="@+id/discover_copyright_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/feedback_label"
+            android:layout_centerHorizontal="true"
+            android:text="@string/discover_copyright_text"
+            android:textSize="@dimen/light_text_size" />
+            
+            
         </RelativeLayout>
 
     </ScrollView>
