--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -195,23 +195,6 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/feedback_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/copyright_textview"
-        android:layout_centerHorizontal="true"
-        android:text="@string/feedback_text"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/white" />
-
-    <TextView
-        android:id="@+id/copyright_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true"
-        android:text="@string/discover_copyright_text" />
+    <include layout="@layout/copyright_footer"/>
 
 </RelativeLayout>
