Modified android manifest to support changes to file names. Adjusted spacing on account info confirm xml Added visibility='gone' to forgot_id layout so that invisible error labels do not take up space. Added quotations to a string in strings_help_strength_bar. Changed password and validation bars to support same business logic as the official application. ForgotUserIdActivity - Added hide and show methods for error labels. Using visibility=gone. Fixed strength bar help activity to support IntentExtraKeys and work. It has been broken since the rename and addition of IntentExtraKey

--- a/Phone/main/res/layout/forgot_id.xml
+++ b/Phone/main/res/layout/forgot_id.xml
@@ -22,12 +22,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/forgot_id_title_label"
             android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="gone"
             android:textColor="@color/red" />
         
         <TextView
             android:id="@+id/forgot_id_account_num_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_below="@+id/forgot_id_submission_error_label"
             android:text="@string/account_info_label_one"
             android:textAppearance="?android:attr/textAppearanceSmall"
