Changed srong auth checking to be the proper GET request. It was a POST - but was still working… Changed some text appearance and spacing on account_info_confirm.xml Restricted the strong auth answer to be one line and changed the return button on the software keyboard to be a done button. Fixed a few more appearance related items and made create login extend a roboactivity.

--- a/Phone/main/res/layout/forgot_id.xml
+++ b/Phone/main/res/layout/forgot_id.xml
@@ -14,7 +14,8 @@
             android:layout_height="wrap_content"
             android:text="@string/forgot_id_title_text"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/black" />
+            android:textColor="@color/black" 
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/forgot_id_submission_error_label"
