--- a/Phone/main/res/layout/account_info_confirm.xml
+++ b/Phone/main/res/layout/account_info_confirm.xml
@@ -50,9 +50,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_confirm_security_precaution_label"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/account_info_confirm_summary_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="@dimen/light_text_size" 
+                android:textStyle="bold"
                 android:textColor="@color/black" />
             
             
