--- a/Phone/main/res/layout/enhanced_account_security.xml
+++ b/Phone/main/res/layout/enhanced_account_security.xml
@@ -59,9 +59,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/account_security_question_placeholder_label"
             android:hint="@string/account_security_question_hint"
-            android:maxLines="@integer/MAX_INPUT_LINES"
             android:imeOptions="actionDone"
-             />
+            android:inputType="textNoSuggestions"
+            android:maxLines="@integer/MAX_INPUT_LINES" />
 
         <TextView
             android:id="@+id/account_security_remember_device_label"
