--- a/Phone/main/res/layout/forgot_login.xml
+++ b/Phone/main/res/layout/forgot_login.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_bg"
+    style="@style/WhiteTheme"
     android:paddingBottom="@dimen/content_padding"
     android:paddingLeft="@dimen/content_padding"
     android:paddingRight="@dimen/content_padding"
@@ -15,7 +15,6 @@
         android:text="@string/forgot_credentials_text"
         android:textAppearance="?android:attr/textAppearanceMedium" 
         android:textColor="@color/black"/>
-
     
     <ListView
         android:id="@android:id/list"
@@ -27,60 +26,9 @@
         android:layout_centerHorizontal="true" 
         android:cacheColorHint="#00000000">
     </ListView>
-    
-    <TableRow
-       android:id="@+id/account_info_help_row"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_centerHorizontal="true"
-       android:layout_marginBottom="32dp" 
-       android:layout_above="@+id/feedback_text_view">
+        
+    <include layout="@layout/need_help_footer"/>
 
-            <TextView
-                android:id="@+id/need_help_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/need_help_text"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/help_number_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:text="@string/need_help_number_text"
-                android:textColor="@color/blue" />
-            
-     </TableRow>
-
-    <TextView
-        android:id="@+id/feedback_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/discover_secured_text_view"
-        android:layout_centerHorizontal="true"
-        android:text="@string/feedback_text"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/blue" />
-
-    <TextView
-        android:id="@+id/discover_secured_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/discover_secured_text" />
-
-    <ImageView
-        android:id="@+id/lock_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@id/feedback_text_view"
-        android:layout_toRightOf="@id/discover_secured_text_view"
-        android:contentDescription="@string/discover_copyright_text"
-        android:src="@drawable/lock" 
-        android:paddingLeft="8dp"
-        android:paddingBottom="3dp"/>
+    <include layout="@layout/copyright_footer"/>
 
 </RelativeLayout>
