--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -15,6 +15,19 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        
+    </style>
+    
+    <style name="BlackTheme">
+        <item name="android:background">@drawable/login_bkgd</item>
     </style>
 
+    <style name="WhiteTheme">
+        <item name="android:background">@drawable/gradient_bg</item>
+    </style>
+    
+    <style name="WhiteThemeFooter">
+        <item name="android:textColor">@color/blue</item>
+    </style>
+    
 </resources>
